--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
     <div class="container">
         <div class="quote-container">
-            <p class="quote">this is a quote</p>
+            <p class="quote">loading...</p>
         </div>
         <div class="author-NAME">
-            <span class="author">-albert</span>
+            <span class="author"></span>
         </div>
         <button class="btn">Get a random Quote</button>
     </div>
